use a slack app to listen + post to slack

--- a/api/Gemfile
+++ b/api/Gemfile
@@ -29,6 +29,8 @@ gem 'terminal-table'
 
 gem 'httparty'
 
+gem 'dotenv-rails'
+
 group :development, :test do
   gem 'awesome_print'
   gem 'byebug'
