--- a/api/Dockerfile
+++ b/api/Dockerfile
@@ -16,4 +16,4 @@ RUN bundle install
 
 COPY . .
 
-CMD ["bundle", "exec", "rails", "s", "-b", "0.0.0.0", "-p", "80"]
+CMD ["./docker-entrypoint.sh"]
