--- a/web/package.json
+++ b/web/package.json
@@ -7,15 +7,15 @@
   "dependencies": {
     "@apollo/react-hooks": "3.1.3",
     "apollo-boost": "0.4.4",
-    "graphql": "14.5.8",
+    "graphql": "16.6.0",
     "graphql-anywhere": "4.2.4",
     "lodash.groupby": "4.6.0",
-    "query-string": "6.10.1",
-    "react": "16.8.6",
-    "react-charts": "2.0.0-beta.6",
-    "react-dom": "16.8.6",
-    "react-scripts": "3.0.1",
-    "recharts": "2.0.0-beta.1",
+    "query-string": "8.1.0",
+    "react": "18.2.0",
+    "react-charts": "2.0.0-beta.7",
+    "react-dom": "18.2.0",
+    "react-scripts": "5.0.1",
+    "recharts": "2.5.0",
     "semantic-ui-react": "0.88.1"
   },
   "devDependencies": {
