--- a/web/package.json
+++ b/web/package.json
@@ -5,10 +5,8 @@
   "keywords": [],
   "main": "src/index.js",
   "dependencies": {
-    "@apollo/react-hooks": "3.1.3",
-    "apollo-boost": "0.4.4",
+    "@apollo/client": "^3.7.10",
     "graphql": "16.6.0",
-    "graphql-anywhere": "4.2.4",
     "lodash.groupby": "4.6.0",
     "query-string": "8.1.0",
     "react": "18.2.0",
