--- a/web/package.json
+++ b/web/package.json
@@ -14,16 +14,18 @@
     "react-dom": "18.2.0",
     "react-scripts": "5.0.1",
     "recharts": "2.5.0",
-    "semantic-ui-react": "0.88.1"
+    "semantic-ui-react": "2.1.4"
   },
   "devDependencies": {
+    "prettier": "^2.8.6",
     "typescript": "3.3.3"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "fmt": "prettier --write src"
   },
   "browserslist": [
     ">0.2%",
