add a health check to the api

--- a/api/Dockerfile
+++ b/api/Dockerfile
@@ -6,6 +6,9 @@ ENV RAILS_ENV=production
 
 EXPOSE 80
 
+HEALTHCHECK --interval=5m --timeout=3s \
+  CMD curl -f http://localhost/ || exit 1
+
 RUN apt-get update -qq && apt-get install -y postgresql-client
 
 WORKDIR /app
