--- a/web/package.json
+++ b/web/package.json
@@ -33,5 +33,8 @@
     "not ie <= 11",
     "not op_mini all"
   ],
-  "proxy": "http://localhost:5000"
+  "proxy": "http://localhost:5000",
+  "resolutions": {
+    "react-charts/d3-scale/d3-interpolate/d3-color": "^3.1.0"
+  }
 }
