--- a/web/package.json
+++ b/web/package.json
@@ -35,6 +35,7 @@
   ],
   "proxy": "http://localhost:5000",
   "resolutions": {
-    "react-charts/d3-scale/d3-interpolate/d3-color": "^3.1.0"
+    "react-charts/d3-scale/d3-interpolate/d3-color": "^3.1.0",
+    "react-scripts/**/nth-check": "2.0.1"
   }
 }
